src/rust/dcmfx_cli/tests/snapshots/print__with_s3_glob_input_with_partial_prefix.snap
---
source: dcmfx_cli/tests/print.rs
expression: local_glob_stdout
snapshot_kind: text
---
        (0008,0100) SH Code Value                           [     2 bytes] "de"
        (0008,0100) SH Code Value                           [     2 bytes] "de"
        (0008,0100) SH Code Value                           [     2 bytes] "fr"
        (0008,0100) SH Code Value                           [     2 bytes] "fr"
        (0008,0102) SH Coding Scheme Designator             [     8 bytes] "RFC3066"
        (0008,0102) SH Coding Scheme Designator             [     8 bytes] "RFC3066"
        (0008,0102) SH Coding Scheme Designator             [     8 bytes] "RFC3066"
        (0008,0102) SH Coding Scheme Designator             [     8 bytes] "RFC3066"
        (0008,0104) LO Code Meaning                         [     6 bytes] "French"
        (0008,0104) LO Code Meaning                         [     6 bytes] "French"
        (0008,0104) LO Code Meaning                         [     6 bytes] "German"
        (0008,0104) LO Code Meaning                         [     6 bytes] "German"
      (FFFE,E000) Item
      (FFFE,E000) Item
      (FFFE,E000) Item
      (FFFE,E000) Item
      (FFFE,E00D) Item Delimitation Item
      (FFFE,E00D) Item Delimitation Item
      (FFFE,E00D) Item Delimitation Item
      (FFFE,E00D) Item Delimitation Item
    (0008,0006) SQ Language Code Sequence
    (0008,0006) SQ Language Code Sequence
    (0008,0006) SQ Language Code Sequence
    (0008,0006) SQ Language Code Sequence
    (0070,0081) LO Content Description                  [     4 bytes] "PET"
    (0070,0081) LO Content Description                  [     4 bytes] "TEP"
    (0070,0081) LO Content Description                  [    16 bytes] "PET 20  …
    (0070,0081) LO Content Description                  [    18 bytes] "TEP Vin …
    (FFFE,E0DD) Sequence Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E000) Item
  (FFFE,E000) Item
  (FFFE,E000) Item
  (FFFE,E000) Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E00D) Item Delimitation Item
  (FFFE,E00D) Item Delimitation Item
(0002,0001) OB File Meta Information Version        [     2 bytes] [00 01]
(0002,0001) OB File Meta Information Version        [     2 bytes] [00 01]
(0002,0002) UI Media Storage SOP Class UID          [    24 bytes] "1.2.840 … (Color Palette Storage)
(0002,0002) UI Media Storage SOP Class UID          [    24 bytes] "1.2.840 … (Color Palette Storage)
(0002,0003) UI Media Storage SOP Instance UID       [    20 bytes] "1.2.840 … (PET 20 Step Color Palette SOP Instance)
(0002,0003) UI Media Storage SOP Instance UID       [    20 bytes] "1.2.840 … (PET Color Palette SOP Instance)
(0002,0010) UI Transfer Syntax UID                  [    20 bytes] "1.2.840 … (Explicit VR Little Endian)
(0002,0010) UI Transfer Syntax UID                  [    20 bytes] "1.2.840 … (Explicit VR Little Endian)
(0002,0012) UI Implementation Class UID             [    22 bytes] "1.3.6.1.4. …
(0002,0012) UI Implementation Class UID             [    22 bytes] "1.3.6.1.4. …
(0002,0013) SH Implementation Version Name          [    16 bytes] "PIXELMEDJA …
(0002,0013) SH Implementation Version Name          [    16 bytes] "PIXELMEDJA …
(0002,0016) AE Source Application Entity Title      [    10 bytes] "OURAETITLE"
(0002,0016) AE Source Application Entity Title      [    10 bytes] "OURAETITLE"
(0008,0005) CS Specific Character Set               [    10 bytes] "ISO_IR 192"
(0008,0005) CS Specific Character Set               [    10 bytes] "ISO_IR 192"
(0008,0012) DA Instance Creation Date               [     8 bytes] 2012-07-02
(0008,0012) DA Instance Creation Date               [     8 bytes] 2012-07-02
(0008,0013) TM Instance Creation Time               [    10 bytes] 17:26:49.367
(0008,0013) TM Instance Creation Time               [    10 bytes] 17:26:49.854
(0008,0016) UI SOP Class UID                        [    24 bytes] "1.2.840 … (Color Palette Storage)
(0008,0016) UI SOP Class UID                        [    24 bytes] "1.2.840 … (Color Palette Storage)
(0008,0018) UI SOP Instance UID                     [    20 bytes] "1.2.840 … (PET 20 Step Color Palette SOP Instance)
(0008,0018) UI SOP Instance UID                     [    20 bytes] "1.2.840 … (PET Color Palette SOP Instance)
(0020,0013) IS Instance Number                      [     2 bytes] "1"
(0020,0013) IS Instance Number                      [     2 bytes] "1"
(0028,1101) US Red Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1101) US Red Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1102) US Green Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1102) US Green Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1103) US Blue Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1103) US Blue Palette Color Lookup Table Descriptor  [     6 bytes] 256, 0, 8
(0028,1199) UI Palette Color Lookup Table UID       [    20 bytes] "1.2.840 … (PET 20 Step Color Palette SOP Instance)
(0028,1199) UI Palette Color Lookup Table UID       [    20 bytes] "1.2.840 … (PET Color Palette SOP Instance)
(0028,1201) OW Red Palette Color Lookup Table Data  [   256 bytes] [00 00 00 0 …
(0028,1201) OW Red Palette Color Lookup Table Data  [   256 bytes] [00 00 00 0 …
(0028,1202) OW Green Palette Color Lookup Table Data  [   256 bytes] [00 00 00 …
(0028,1202) OW Green Palette Color Lookup Table Data  [   256 bytes] [00 02 04 …
(0028,1203) OW Blue Palette Color Lookup Table Data  [   256 bytes] [00 00 00  …
(0028,1203) OW Blue Palette Color Lookup Table Data  [   256 bytes] [00 01 03  …
(0028,2000) OB ICC Profile                          [  3144 bytes] [00 00 0C 4 …
(0028,2000) OB ICC Profile                          [  3144 bytes] [00 00 0C 4 …
(0070,0080) CS Content Label                        [     4 bytes] "PET"
(0070,0080) CS Content Label                        [    12 bytes] "PET_20_STEP"
(0070,0081) LO Content Description                  [     4 bytes] "PET"
(0070,0081) LO Content Description                  [    12 bytes] "PET 20 Step"
(0070,0084) PN Content Creator's Name               [    20 bytes] "PixelMed^P …
(0070,0084) PN Content Creator's Name               [    20 bytes] "PixelMed^P …
(0070,0087) SQ Alternate Content Description Sequence
(0070,0087) SQ Alternate Content Description Sequence
(FFFE,E0DD) Sequence Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
